# tavillon_point_cloud_processing

./: .gitignore  README.md
point_clouds/: Model0.3dm  Model0.ply  Model2.ply  Model3.ply  Model3.plybak  Model4.ply  Model5.ply  Model6.ply  Model7.ply
point_clouds/New folder/tavillon_console/: tavillon_console.sln
point_clouds/New folder/tavillon_console/tavillon_console/: cgal.h  cgal_pointcloud_processing.h  easy3d_pointcloud_viewer.h  out.ply  tavillon_console.cpp  tavillon_console.vcxproj
point_clouds/New folder/tavillon_console/tavillon_console/x64/Debug/tavillon_console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.write.1.tlog  tavillon_console.lastbuildstate
point_clouds/New folder/tavillon_console/tavillon_console/x64/Release/: tavillon_console.exe.recipe
point_clouds/New folder/tavillon_console/tavillon_console/x64/Release/tavillon_console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tavillon_console.lastbuildstate
source/rhino/: cmdtavillon_point_cloud_processing_rhino.cpp  cmdtavillon_test.cpp
source/rhino/PlugIn1/: PlugIn1.sln
source/rhino/PlugIn1/PlugIn1/: PlugIn1.def  PlugIn1.rc  PlugIn1.vcxproj  PlugIn1.vcxproj.filters  PlugIn1App.cpp  PlugIn1App.h  PlugIn1PlugIn.cpp  PlugIn1PlugIn.h  Resource.h  cmdPlugIn1.cpp  stdafx.cpp
source/rhino/Tavillon/: Tavillon.sln
source/rhino/Tavillon/Tavillon/: Resource.h  Tavillon.def  Tavillon.rc  Tavillon.vcxproj  Tavillon.vcxproj.filters  TavillonApp.cpp  TavillonApp.h  TavillonPlugIn.cpp  TavillonPlugIn.h  cmdTavillon.cpp  stdafx.cpp
source/rhino/Tavillon/Tavillon/res/: Tavillon.rc2
source/rhino/Tavillon/Tavillon/x64/Debug/: Tavillon.rhp.recipe
source/rhino/Tavillon/Tavillon/x64/Debug/Tavillon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tavillon.lastbuildstate
source/rhino/tavillon2/: tavillon2.sln
source/rhino/tavillon2/tavillon2/: Resource.h  cmdtavillon2.cpp  cmdtavillon_test.cpp  stdafx.cpp  tavillon2.def  tavillon2.rc  tavillon2.vcxproj  tavillon2.vcxproj.filters  tavillon2App.cpp  tavillon2App.h  tavillon2PlugIn.cpp  tavillon2PlugIn.h
source/rhino/tavillon2/tavillon2/res/: tavillon2.rc2
source/rhino/tavillon2/tavillon2/x64/Debug/: tavillon2.ilk  tavillon2.res  tavillon2.rhp.recipe
source/rhino/tavillon2/tavillon2/x64/Debug/tavillon2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  tavillon2.lastbuildstate  tavillon2.write.1u.tlog
source/rhino/tavillon2/x64/Debug/: tavillon2.exp  tavillon2.lib  tavillon2.rhp
source/rhino/tavillon_rhino/: tavillon_rhino.sln
source/rhino/tavillon_rhino/tavillon_rhino/: Resource.h  cmdtavillon_rhino.cpp  stdafx.cpp  tavillon_rhino.def  tavillon_rhino.rc  tavillon_rhino.vcxproj  tavillon_rhino.vcxproj.filters  tavillon_rhinoApp.cpp  tavillon_rhinoApp.h  tavillon_rhinoPlugIn.cpp  tavillon_rhinoPlugIn.h
source/rhino/tavillon_rhino/tavillon_rhino/res/: tavillon_rhino.rc2
source/rhino/tavillon_rhino/tavillon_rhino/x64/Debug/: tavillon_rhino.ilk  tavillon_rhino.res  tavillon_rhino.rhp.recipe
source/rhino/tavillon_rhino/tavillon_rhino/x64/Debug/tavillon_rhino.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  tavillon_rhino.lastbuildstate  tavillon_rhino.write.1u.tlog
source/rhino/tavillon_rhino/x64/Debug/: tavillon_rhino.exp  tavillon_rhino.lib  tavillon_rhino.rhp
source/standalone/tavillon_console/tavillon_console/: cgal.h  cgal_pointcloud_processing.h  easy3d_pointcloud_viewer.h  tavillon_console.cpp  tavillon_console.vcxproj  tavillon_console.vcxproj.filters
source/standalone/tavillon_console/tavillon_console/x64/Debug/: tavillon_console.exe.recipe  tavillon_console.ilk
source/standalone/tavillon_console/tavillon_console/x64/Debug/tavillon_console.tlog/: link.read.1.tlog
source/standalone/tavillon_console/tavillon_console/x64/Release/: tavillon_console.exe.recipe
source/standalone/tavillon_console/tavillon_console/x64/Release/tavillon_console.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  tavillon_console.lastbuildstate
tavillon_pre_experiment/: CMakeLists.txt  main_cgal.cpp  main_cilantro.cpp  main_cockroach.cpp  main_open3d.cpp  pch.h
